fix: contrast colour at the stepper component

--- a/src/govie/components/progress-stepper/_index.scss
+++ b/src/govie/components/progress-stepper/_index.scss
@@ -47,7 +47,7 @@
   }
 
   .govie-progress-stepper__label-icon-circle {
-    fill: govie-colour("mid-grey");
+    fill: govie-colour("dark-grey");
   }
 
   .govie-progress-stepper__completed-icon {
